Alpha 0.1.8.42
- Write changelog to console when update is available.
- Expose animated blocks.

Alpha 0.1.8.41
- Add support for MC 1.19.3.
- Add support for GriefDefender v2. Thanks, haroldrc, for the heads-up!
- Add support for Medieval Factions 5. Thanks, OGVampire, for the suggestion!
- Add config option to refund doors on delete. Thanks, LoneTiger, for the suggestion!
- Add new event: DoorDeleteEvent. This is called after a door is deleted.
- Blacklist ores by default when mcMMO is installed.

Alpha 0.1.8.40
- Add support for 1.19.1.
- Force legacy materials stuff to run on init to avoid slowdowns later on. Thanks, YoshiiKun_, for the report!

Alpha 0.1.8.39
- Fix issue with protection hooks for offline players on MC 1.17.x and 1.18.x caused by a failure to correctly count to 3.

Alpha 0.1.8.38
- Add support for Minecraft 1.19.
- Fixed bottom row of blocks sometimes lagging behind the rest of the door when dragging over other blocks (BigDoor, SlidingDoor).
- Allow certain types of attached blocks (e.g. torches, rails, plants, redstone, etc) to be part of doors on 1.18+.
- Add support for Java 19.
- Added hook for Konquest. Thanks, Sy, for the suggestion!
- Added DoorEventAutoToggle to allow other plugins (BDO) to cancel the autoCloseTimer.

Alpha 0.1.8.37
- Add support for Minecraft 1.18.2. Massive thanks to Bonn2 for helping me test this!
- Remove duplicated messages in item names/lores in the GUI. Thanks, DjeyMute, for the suggestion!

Alpha 0.1.8.36
- Fix issue with buttons etc when placed on/next to powerblocks if the powerblocks are too close/inside the door. Thanks, Lilith88, for the bug report!
- Add bedrock and portal stuff to the default materials blacklist. Thanks, Henriko Magnifico, for the bug report!
- Fix FakePlayerCreator trying to retrieve a recently-remove method. Thanks, SlimeDog, for the bug report!

Alpha 0.1.8.35
- Log more information when a door cannot be toggled because there's no available space.