@@ -1,6 +1,7 @@
 Alpha 0.1.8.42
 - Write changelog to console when update is available.
 - Expose animated blocks.
+- Add 1.19 resource packs.
 
 Alpha 0.1.8.41
 - Add support for MC 1.19.3.
